# bwtb3m

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  configure.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  allHamDna.cpp  arraytocompact.cpp  bwtb3m.cpp  bwtb3mdecoderl.cpp  bwtb3mtobwa.cpp  bwtcomputessa.cpp  bwtdecodeblock.cpp  bwttestdecodespeed.cpp  bwttodnarank.cpp  bwttodnarank256.cpp  bwttohwt.cpp  bytestreamToLz4.cpp  checkLCPBit.cpp  checkbwt.cpp  decodecompact.cpp  digitsToCompact.cpp  fa4suffixarraytocompact.cpp  fagzToCompact.cpp  fagzToCompact4.cpp  fagzToCompact4BigBand.cpp  fagzToCompact4BigBandBiDir.cpp  fagzToCompactUTerm.cpp  hwtPreIsaToIsa.cpp  hwtToLCP.cpp  hwtToRlHwt.cpp  lcpbit.cpp  probeScanDna.cpp  sasubsample.cpp  sortPreIsa.cpp
