ACLOCAL_AMFLAGS=-I m4

bin_PROGRAMS = \
	allHamDna \
	bwtb3m \
	bwtb3mdecoderl \
	bwtb3mtobwa \
	bytestreamToLz4 \
	fagzToCompact \
	hwtToRlHwt \
	probeScanDna \
	digitsToCompact \
	hwtToLCP
noinst_HEADERS = 

bwtb3m_SOURCES = bwtb3m.cpp
bytestreamToLz4_SOURCES = bytestreamToLz4.cpp
bwtb3mtobwa_SOURCES = bwtb3mtobwa.cpp
bwtb3mdecoderl_SOURCES = bwtb3mdecoderl.cpp
allHamDna_SOURCES = allHamDna.cpp
hwtToRlHwt_SOURCES = hwtToRlHwt.cpp
probeScanDna_SOURCES = probeScanDna.cpp
fagzToCompact_SOURCES = fagzToCompact.cpp
digitsToCompact_SOURCES = digitsToCompact.cpp
hwtToLCP_SOURCES = hwtToLCP.cpp
