ACLOCAL_AMFLAGS=-I m4

bin_PROGRAMS = \
	allHamDna \
	bwtb3m \
	bwtb3mdecoderl \
	bwtb3mtobwa \
	bytestreamToLz4 \
	fagzToCompact \
	fagzToCompact4 \
	hwtToRlHwt \
	probeScanDna \
	digitsToCompact \
	hwtToLCP \
	sortPreIsa \
	bwtdecodeblock \
	bwtcomputessa \
	bwttestdecodespeed \
	arraytocompact \
	fa4suffixarraytocompact \
	bwttodnarank \
	sasubsample \
	fagzToCompact4BigBand \
	decodecompact
noinst_HEADERS = 

bwtb3m_SOURCES = bwtb3m.cpp
bytestreamToLz4_SOURCES = bytestreamToLz4.cpp
bwtb3mtobwa_SOURCES = bwtb3mtobwa.cpp
bwtb3mdecoderl_SOURCES = bwtb3mdecoderl.cpp
allHamDna_SOURCES = allHamDna.cpp
hwtToRlHwt_SOURCES = hwtToRlHwt.cpp
probeScanDna_SOURCES = probeScanDna.cpp
fagzToCompact_SOURCES = fagzToCompact.cpp
fagzToCompact4_SOURCES = fagzToCompact4.cpp
digitsToCompact_SOURCES = digitsToCompact.cpp
hwtToLCP_SOURCES = hwtToLCP.cpp
sortPreIsa_SOURCES = sortPreIsa.cpp
bwtdecodeblock_SOURCES = bwtdecodeblock.cpp
bwtcomputessa_SOURCES = bwtcomputessa.cpp
bwttestdecodespeed_SOURCES = bwttestdecodespeed.cpp
arraytocompact_SOURCES = arraytocompact.cpp
fa4suffixarraytocompact_SOURCES = fa4suffixarraytocompact.cpp
bwttodnarank_SOURCES = bwttodnarank.cpp
sasubsample_SOURCES = sasubsample.cpp
fagzToCompact4BigBand_SOURCES = fagzToCompact4BigBand.cpp
decodecompact_SOURCES = decodecompact.cpp
